fix latest z-index issue

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -105,7 +105,7 @@ header {
     position: fixed;
     left: calc(50% - 3rem);
     top: 1.6rem;
-    z-index: 1;
+    z-index: 2;
 }
 
 footer {
@@ -238,7 +238,7 @@ img.bag {
     transition: left 0.4s ease;
     color: #1d194b;
     padding: 1rem;
-    z-index: 2;
+    z-index: 3;
 }
 
 .browse img.open-book {
